--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -134,7 +134,7 @@
       </div>
     </div>
 
-    <div class="row minHe">
+    <div class="row minHe800">
       <div class="col">
         <h3>Userstories</h3>
         <p> Hier zijn de functionaliteiten van deze applicatie.</p>
