--- a/src/app/pages/user/list/list.component.html
+++ b/src/app/pages/user/list/list.component.html
@@ -7,34 +7,35 @@
       </div>
     </div>
     <div class="row container">
-
       <div class="col">
         <br>
-        <table class="table table-bordered table-dark minWi103">
-          <thead>
-            <tr>
-              <th scope=" col">id</th>
-              <th scope="col">Naam</th>
-              <th scope="col">E-mailadres</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let user of users; let i = index">
-              <td>{{ user.id }}</td>
-              <td>
-                <a routerLink="{{ user.id }}" routerLinkActive="active" ariaCurrentWhenActive="page">{{ user.firstName
-                  }}
-                  {{ user.lastName }}</a>
-              </td>
-              <td>
-                <a routerLink="{{ user.id }}" routerLinkActive="active" ariaCurrentWhenActive="page">{{
-                  user.emailAddress
-                  }}
-                </a>
-              </td>
-            </tr>
-          </tbody>
-        </table>
+        <div class="genius-move-by-me">
+          <table class="table table-bordered table-dark minWi103">
+            <thead>
+              <tr>
+                <th scope=" col">id</th>
+                <th scope="col">Naam</th>
+                <th scope="col">E-mailadres</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let user of users; let i = index">
+                <td>{{ user.id }}</td>
+                <td>
+                  <a routerLink="{{ user.id }}" routerLinkActive="active" ariaCurrentWhenActive="page">{{ user.firstName
+                    }}
+                    {{ user.lastName }}</a>
+                </td>
+                <td>
+                  <a routerLink="{{ user.id }}" routerLinkActive="active" ariaCurrentWhenActive="page">{{
+                    user.emailAddress
+                    }}
+                  </a>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </div>
     </div>
   </div>
