--- a/src/app/pages/user/list/list.component.css
+++ b/src/app/pages/user/list/list.component.css
@@ -9,3 +9,10 @@
 .genius-move-by-me {
   margin-bottom: 240px;
 }
+
+table.table td a.edit {
+  color: #ffc107;
+}
+table.table td a.delete {
+  color: #e34724;
+}
