--- a/src/app/shared/nav/nav.component.html
+++ b/src/app/shared/nav/nav.component.html
@@ -1,5 +1,5 @@
 <div class="toolbar bg-main" role="banner">
-  <img width="40" alt="Avans Logo" src="https://avansapp.azurewebsites.net/img/AvansTGTGicon.ico" />
+  <img width="40" alt="Avans Logo" src="favicon.ico" />
   <ul class="nav">
     <li class="nav-item">
       <a class="nav-link active" aria-current="page" routerLink="/dashboard">Home</a>
