Fuc Footer in angular

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="text-center text-white fixed-bottom bg-main">
-  <section class="">
+  <section>
     <div class="container text-center text-md-start">
       <div class="row mt-2">
         <div class="col-md-6 col-lg-4 col-xl-5  mb-3">
@@ -23,12 +23,9 @@
           <h6 class="text-uppercase fw-bold mb-2">
             Contact
           </h6>
-          <p><i class="fas fa-home me-3"></i> Lovensdijkstraat 61, 4818 AJ, Breda</p>
-          <p>
-            <i class="fas fa-envelope me-3"></i>
-            mjh.chen@student.avans.nl
-          </p>
-          <p><i class="fas fa-phone me-3"></i> + 06 234 567 88</p>
+          <p><i class="fas fa-home me-3"></i>Lovensdijkstraat 61, 4818 AJ, Breda</p>
+          <p><i class="fas fa-envelope me-3"></i>mjh.chen@student.avans.nl</p>
+          <p><i class="fas fa-phone me-3"></i>+ 06 234 567 88</p>
         </div>
       </div>
     </div>
