--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -108,7 +108,7 @@
         <p>Maaltijd</p>
         <ul>
           <li>Naam: string</li>
-          <li>Prijs: decimal</li>
+          <li>Prijs: number</li>
           <li>Bezorgtijd: date</li>
           <li>Datum: date</li>
         </ul>
