--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -16,7 +16,7 @@
             Producten
           </h6>
           <p>
-            <a class="nav-link" routerLink="/meals">Maaltijden</a>
+            <a class="nav-link" routerLink="/meal">Maaltijden</a>
           </p>
         </div>
         <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-3">
