--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
     <h3>Welkom bij Gouden maaltijdbezorging</h3>
   </div>
   <div class="card-container">
-    <a class="card" routerLink="/meals">
+    <a class="card" routerLink="/meal">
       <h5>Maaltijden</h5>
     </a>
     <a class="card" routerLink="/about-us">
