--- a/src/app/pages/meal/meal.component.html
+++ b/src/app/pages/meal/meal.component.html
@@ -1,7 +1,7 @@
-<div class="container-fluid move100right move40down">
-  <h3>Maaltijden</h3>
+<div class="move30down max-width77">
   <div class="row">
     <div class="col">
+      <meal-list></meal-list>
     </div>
     <div class="col">
       <router-outlet></router-outlet>
