--- a/src/app/pages/user/user.component.html
+++ b/src/app/pages/user/user.component.html
@@ -1,7 +1,7 @@
 <div class="move30down max-width77">
   <div class="row">
     <div class="col">
-      <app-list></app-list>
+      <user-list></user-list>
     </div>
     <div class="col">
       <router-outlet></router-outlet>
