Remove scroll wheel lesser height

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,8 +1,8 @@
-<div class="container-fluid move100right move40down">
-  <p class="h2 fw-bold"> Log in </p>
+<div class="container-fluid move100right move30down">
+  <p class="h3"> Log in </p>
   <div class="cardBorder text-white text-opacity-75 text">
     <form>
-      <div class="container move40down">
+      <div class="container move30down">
         <div class="row row-cols-2">
           <div class="col">
             <div class="d-flex flex-row align-items-center mb-4">
@@ -15,7 +15,7 @@
           </div>
           <div class="col"></div>
           <div class="col">
-            <div class="d-flex flex-row align-items-center mb-4">
+            <div class="d-flex flex-row align-items-center mb-2">
               <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
               <div class="form-outline flex-fill mb-0">
                 <input type="password" id="form2Example2" class="form-control" />
@@ -25,7 +25,7 @@
           </div>
         </div>
 
-        <div class="ms-4 mb-4">
+        <div class="ms-4 mb-3">
           <label>
             <a
               href="https://accounts.google.com/signin/v2/recoveryidentifier?flowName=GlifWebSignIn&flowEntry=AccountRecovery">Wachtwoord
