--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,8 +1,8 @@
-<div class="container-fluid move100right move40down">
-  <p class="h2 fw-bold"> Meld je aan </p>
+<div class="container-fluid move100right move30down">
+  <p class="h3"> Meld je aan </p>
   <div class="cardBorder text-white text-opacity-75 text">
     <form>
-      <div class="container move40down">
+      <div class="container move30down">
         <div class="row row-cols-2">
           <div class="col">
             <div class="d-flex flex-row align-items-center mb-4">
@@ -23,7 +23,7 @@
             </div>
           </div>
           <div class="col">
-            <div class="d-flex flex-row align-items-center mb-4">
+            <div class="d-flex flex-row align-items-center mb-2">
               <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
               <div class="form-outline flex-fill mb-0">
                 <input type="password" id="form3Example4c" class="form-control" />
@@ -32,7 +32,7 @@
             </div>
           </div>
           <div class="col">
-            <div class="d-flex flex-row align-items-center mb-4">
+            <div class="d-flex flex-row align-items-center mb-2">
               <i class="fas fa-key fa-lg me-3 fa-fw"></i>
               <div class="form-outline flex-fill mb-0">
                 <input type="password" id="form3Example4cd" class="form-control" />
@@ -42,7 +42,7 @@
           </div>
         </div>
 
-        <div class="form-check mb-4">
+        <div class="form-check mb-3">
           <input class="form-check-input mt-2 mx-2" type="checkbox" value="" id="form2Example3c" />
           <label class="form-check-label " for="form2Example3">
             Ik ga akkoord met alle verklaringen in de servicevoorwaarden
