--- a/src/app/pages/user/detail/detail.component.html
+++ b/src/app/pages/user/detail/detail.component.html
@@ -9,7 +9,7 @@
       </div>
       <ul>
         <li>E-mailadres: {{ user?.emailAddress }}</li>
-        <li>Geboortedatum: {{ user?.birthDate }}</li>
+        <li>Geboortedatum: {{ user?.birthDate?.toLocaleString("nl-NL") }}</li>
         <li *ngIf="user?.isGraduated">Is al afgestudeerd.</li>
         <li *ngIf="!user?.isGraduated">Is nog niet afgestudeerd.</li>
         <li>Telefoonnummer: {{ user?.phoneNumber }}</li>
