--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -19,11 +19,12 @@
             <a class="nav-link" routerLink="/meal">Maaltijden</a>
           </p>
         </div>
-        <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-3">
+        <div class="col-md-3 col-lg-3 col-xl-4 mx-auto mb-md-0 mb-3">
           <h6 class="text-uppercase fw-bold mb-2">
             Contact
           </h6>
-          <p><i class="fas fa-home me-3"></i>Lovensdijkstraat 61, 4818 AJ, Breda</p>
+          <p><i class="fas fa-home me-3"></i>Lovensdijkstraat 61,</p>
+          <p class="pad-left">4818 AJ, Breda</p>
           <p><i class="fas fa-envelope me-3"></i>mjh.chen@student.avans.nl</p>
           <p><i class="fas fa-phone me-3"></i>+ 06 234 567 88</p>
         </div>
