--- a/src/app/pages/meal/edit/edit.component.html
+++ b/src/app/pages/meal/edit/edit.component.html
@@ -6,20 +6,18 @@
     <h3>Nieuwe maaltijd toevoegen</h3>
   </div>
   <div class="max-width77">
-
-
     <!-- Edit form voor meal model -->
-
     <form #mealEditForm="ngForm" name="form" (ngSubmit)="onSubmit()" novalidate>
       <div class="row">
+        <!-- name -->
         <div class="col-5">
-          <!-- name -->
           <div class="form-group">
             <label for="name">Naam</label>
-            <input type="text" name="name" class="form-control" [(ngModel)]="meal!.name" #name="ngModel" minlength="3"
-              required [ngClass]="{
+            <input type="text" id="name" name="name" class="form-control" [(ngModel)]="meal!.name" #name="ngModel"
+                   minlength="3"
+                   required [ngClass]="{
                         'is-invalid': name.invalid && name.touched
-                    }" />
+                    }"/>
             <div *ngIf="name.invalid && name.touched" class="invalid-feedback">
               <div *ngIf="name.errors!['required']">
                 Naam is verplicht
@@ -30,15 +28,20 @@
             </div>
           </div>
         </div>
+        <!-- price -->
         <div class="col-5">
-          <!-- price -->
           <div class="form-group">
             <label for="price">Prijs</label>
-            <input type="nu" name="price" class="form-control" [(ngModel)]="meal!.price" #price="ngModel" required
-              [ngClass]="{'is-invalid': price.invalid && price.touched}" />
+            <input type="number" id="price" pattern="^\d*(\.\d{0,2})?$" name="price" class="form-control"
+                   [(ngModel)]="meal!.price"
+                   #price="ngModel" required
+                   [ngClass]="{'is-invalid': price.invalid && price.touched}"/>
             <div *ngIf="price.invalid && price.touched" class="invalid-feedback">
               <div *ngIf="price.errors!['required']">
                 Prijs is verplicht
+              </div>
+              <div *ngIf="price.errors!['pattern']">
+                Maximaal 2 decimalen
               </div>
             </div>
           </div>
@@ -51,51 +54,26 @@
           <div class="row-5">
             <div class="form-group">
               <label for="deliverytime">Bezorgtijd</label>
-              <input type="time" name="deliverytime" class="form-control"
-                [ngModel]="meal!.deliveryTime | date:'shortTime'" (ngModelChange)="meal!.deliveryTime = $event"
-                name="Bezorgtijd" />
+              <input type="time" id="deliverytime" name="deliverytime" class="form-control"
+                     [ngModel]="meal!.deliveryTime | date:'shortTime'" (ngModelChange)="meal!.deliveryTime = $event"
+              />
             </div>
           </div>
           <br>
+          <!-- deliverydate-->
           <div class="row-5">
             <div class="form-group">
               <label for="deliverydate">Bezorgdatum</label>
-              <input type="date" name="deliverydate" class="form-control"
-                [ngModel]="meal!.deliveryDate | date:'yyyy-MM-dd'" (ngModelChange)="meal!.deliveryDate = $event"
-                name="Bezorgdatum" />
+              <input type="date" id="deliverydate" name="deliverydate" class="form-control"
+                     [ngModel]="meal!.deliveryDate | date:'yyyy-MM-dd'" (ngModelChange)="meal!.deliveryDate = $event"
+              />
             </div>
           </div>
-          <!--          <div class="row-5 move5down">-->
-          <!--            &lt;!&ndash; phonenumber &ndash;&gt;-->
-          <!--            <div class="form-group">-->
-          <!--              <label for="phonenumber">Telefoonnummer</label>-->
-          <!--              <input type="text" name="phonenumber" class="form-control" [(ngModel)]="meal!.phoneNumber"-->
-          <!--                     #phonenumber="ngModel" minlength="10" maxlength="10" required [ngClass]="{-->
-          <!--                          'is-invalid': phonenumber.invalid && phonenumber.touched-->
-          <!--                      }"/>-->
-          <!--              <div *ngIf="phonenumber.invalid && phonenumber.touched" class="invalid-feedback">-->
-          <!--                <div *ngIf="phonenumber.errors!['required']">-->
-          <!--                  Telefoonnummer is verplicht-->
-          <!--                </div>-->
-          <!--                <div *ngIf="phonenumber.errors!['minlength']">-->
-          <!--                  De Telefoonnummer moet 10 karakters lang zijn.-->
-          <!--                </div>-->
-          <!--              </div>-->
-          <!--            </div>-->
-          <!--          </div>-->
         </div>
-        <!-- <div class="col-5">
-          //birthdate
-          <div class="form-group">
-            <label for="birthdate">Geboortedatum</label>
-            <input type="date" name="birthdate" class="form-control" />
-          </div>
-        </div> -->
         <div class="col-5">
           <pre>{{ meal | json }}</pre>
         </div>
       </div>
-
 
       <!-- Submit en Cancel buttons -->
       <div class="row py-3">
