--- a/src/app/pages/user/edit/edit.component.html
+++ b/src/app/pages/user/edit/edit.component.html
@@ -16,10 +16,10 @@
           <!-- firstname -->
           <div class="form-group">
             <label for="firstname">Voornaam</label>
-            <input type="text" name="firstname" class="form-control" [(ngModel)]="user!.firstName" #firstname="ngModel"
-              minlength="3" required [ngClass]="{
+            <input type="text" id="firstname" name="firstname" class="form-control" [(ngModel)]="user!.firstName" #firstname="ngModel"
+                   minlength="3" required [ngClass]="{
                         'is-invalid': firstname.invalid && firstname.touched
-                    }" />
+                    }"/>
             <div *ngIf="firstname.invalid && firstname.touched" class="invalid-feedback">
               <div *ngIf="firstname.errors!['required']">
                 Voornaam is verplicht
@@ -34,10 +34,10 @@
           <!-- lastname -->
           <div class="form-group">
             <label for="lastname">Achternaam</label>
-            <input type="text" name="lastname" class="form-control" [(ngModel)]="user!.lastName" #lastname="ngModel"
-              minlength="3" required [ngClass]="{
+            <input type="text" id="lastname" name="lastname" class="form-control" [(ngModel)]="user!.lastName" #lastname="ngModel"
+                   minlength="3" required [ngClass]="{
                         'is-invalid': lastname.invalid && lastname.touched
-                    }" />
+                    }"/>
             <div *ngIf="lastname.invalid && lastname.touched" class="invalid-feedback">
               <div *ngIf="lastname.errors!['required']">
                 Achternaam is verplicht
@@ -56,10 +56,10 @@
           <div class="row-5">
             <div class="form-group">
               <label for="emailaddress">E-mailadres</label>
-              <input type="text" name="emailaddress" class="form-control" [(ngModel)]="user!.emailAddress"
-                #emailaddress="ngModel" minlength="3" required [ngClass]="{
+              <input type="text" id="emailaddress" name="emailaddress" class="form-control" [(ngModel)]="user!.emailAddress"
+                     #emailaddress="ngModel" minlength="3" required [ngClass]="{
                         'is-invalid': emailaddress.invalid && emailaddress.touched
-                    }" />
+                    }"/>
               <div *ngIf="emailaddress.invalid && emailaddress.touched" class="invalid-feedback">
                 <div *ngIf="emailaddress.errors!['required']">
                   E-mailadres is verplicht
@@ -71,22 +71,14 @@
             </div>
           </div>
           <br>
-          <div class="row-5">
-            <!-- isgraduated -->
-            <div class="form-check">
-              <input class="form-check-input " type="checkbox" name="isgraduated" [(ngModel)]="user!.isGraduated"
-                #isgraduated="ngModel" />
-              <label for="isgraduated">Is afgestudeerd</label>
-            </div>
-          </div>
+          <!-- phonenumber -->
           <div class="row-5 move5down">
-            <!-- phonenumber -->
             <div class="form-group">
               <label for="phonenumber">Telefoonnummer</label>
-              <input type="text" name="phonenumber" class="form-control" [(ngModel)]="user!.phoneNumber"
-                #phonenumber="ngModel" minlength="10" maxlength="10" required [ngClass]="{
+              <input type="text" id="phonenumber" name="phonenumber" class="form-control" [(ngModel)]="user!.phoneNumber"
+                     #phonenumber="ngModel" minlength="10" maxlength="10" required [ngClass]="{
                           'is-invalid': phonenumber.invalid && phonenumber.touched
-                      }" />
+                      }"/>
               <div *ngIf="phonenumber.invalid && phonenumber.touched" class="invalid-feedback">
                 <div *ngIf="phonenumber.errors!['required']">
                   Telefoonnummer is verplicht
@@ -97,23 +89,39 @@
               </div>
             </div>
           </div>
+          <br>
+
         </div>
-        <!-- <div class="col-5">
-          //birthdate 
-          <div class="form-group">
-            <label for="birthdate">Geboortedatum</label>
-            <input type="date" name="birthdate" class="form-control" />
-          </div>
-        </div> -->
         <div class="col-5">
           <pre>{{ user | json }}</pre>
         </div>
       </div>
 
-
-      <!-- Submit en Cancel buttons -->
-      <div class="row py-3">
+      <div class="row">
+        <!-- birthdate-->
+        <div class="col-5">
+          <div class="form-group">
+            <label for="birthdate">Geboortedatum</label>
+            <input type="date" id="birthdate" name="birthdate" class="form-control"
+                   [ngModel]="user!.birthDate | date:'yyyy-MM-dd'" (ngModelChange)="user!.birthDate = $event"
+            />
+          </div>
+        </div>
         <div class="col">
+          <!-- isgraduated -->
+          <div class="row-5 py-4 move5down">
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" id="isgraduated" name="isgraduated"
+                     [(ngModel)]="user!.isGraduated"
+                     #isgraduated="ngModel"/>
+              <label for="isgraduated">Is afgestudeerd</label>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Submit en Cancel buttons -->
+      <div class="row py-4">
+        <div class="col minHe300">
           <button type="submit" class="btn btn-primary mx-2" [disabled]="!userEditForm.valid">
             Submit
           </button>
