--- a/src/app/pages/meal/edit/edit.component.html
+++ b/src/app/pages/meal/edit/edit.component.html
@@ -14,10 +14,9 @@
           <div class="form-group">
             <label for="name">Naam</label>
             <input type="text" id="name" name="name" class="form-control" [(ngModel)]="meal!.name" #name="ngModel"
-                   minlength="3"
-                   required [ngClass]="{
+              minlength="3" required [ngClass]="{
                         'is-invalid': name.invalid && name.touched
-                    }"/>
+                    }" />
             <div *ngIf="name.invalid && name.touched" class="invalid-feedback">
               <div *ngIf="name.errors!['required']">
                 Naam is verplicht
@@ -33,9 +32,8 @@
           <div class="form-group">
             <label for="price">Prijs</label>
             <input type="number" id="price" pattern="^\d*(\.\d{0,2})?$" name="price" class="form-control"
-                   [(ngModel)]="meal!.price"
-                   #price="ngModel" required
-                   [ngClass]="{'is-invalid': price.invalid && price.touched}"/>
+              [(ngModel)]="meal!.price" #price="ngModel" required
+              [ngClass]="{'is-invalid': price.invalid && price.touched}" />
             <div *ngIf="price.invalid && price.touched" class="invalid-feedback">
               <div *ngIf="price.errors!['required']">
                 Prijs is verplicht
@@ -55,8 +53,7 @@
             <div class="form-group">
               <label for="deliverytime">Bezorgtijd</label>
               <input type="time" id="deliverytime" name="deliverytime" class="form-control"
-                     [ngModel]="meal!.deliveryTime | date:'shortTime'" (ngModelChange)="meal!.deliveryTime = $event"
-              />
+                [ngModel]="meal!.deliveryTime | date:'shortTime'" (ngModelChange)="meal!.deliveryTime = $event" />
             </div>
           </div>
           <br>
@@ -65,8 +62,7 @@
             <div class="form-group">
               <label for="deliverydate">Bezorgdatum</label>
               <input type="date" id="deliverydate" name="deliverydate" class="form-control"
-                     [ngModel]="meal!.deliveryDate | date:'yyyy-MM-dd'" (ngModelChange)="meal!.deliveryDate = $event"
-              />
+                [ngModel]="meal!.deliveryDate | date:'yyyy-MM-dd'" (ngModelChange)="meal!.deliveryDate = $event" />
             </div>
           </div>
         </div>
@@ -79,9 +75,9 @@
       <div class="row py-3">
         <div class="col">
           <button type="submit" class="btn btn-primary mx-2" [disabled]="!mealEditForm.valid">
-            Submit
+            Gebruiker bewerken
           </button>
-          <button class="btn btn-warning mx-2" routerLink="..">Cancel</button>
+          <button class="btn btn-warning mx-2" routerLink="/meal">Annuleren</button>
         </div>
       </div>
     </form>
