--- a/src/app/pages/meal/detail/detail.component.html
+++ b/src/app/pages/meal/detail/detail.component.html
@@ -4,7 +4,7 @@
       <div class="d-flex justify-content-between align-items-center">
         <h3 class="card-title">Maaltijd {{ meal?.name }}</h3>
         <div>
-          <button type="button" class="btn btn-primary move5down" routerLink="edit">Gebruiker bewerken</button>
+          <button type="button" class="btn btn-primary move5down" routerLink="edit">Maaltijd bewerken</button>
         </div>
       </div>
       <ul>
