--- a/src/app/pages/meal/list/list.component.html
+++ b/src/app/pages/meal/list/list.component.html
@@ -1,9 +1,9 @@
 <div class="container-fluid move100right move30down">
   <div class="row container">
     <div class="d-flex justify-content-between align-items-center">
-      <h3 class="card-title">Gebruikers lijst</h3>
+      <h3 class="card-title">Maaltijden lijst</h3>
       <div>
-        <button type="button" class="btn btn-primary move5down" routerLink="new">Nieuwe gebruiker toevoegen</button>
+        <button type="button" class="btn btn-primary move5down" routerLink="new">Nieuwe maaltijd toevoegen</button>
       </div>
     </div>
     <div class="row container">
