--- a/apps/meal-delivery/src/styles.css
+++ b/apps/meal-delivery/src/styles.css
@@ -155,6 +155,14 @@ a:visited:hover {
   background-color: #940020;
 }
 
+.edit {
+  color: #ffc107;
+}
+
+.delete {
+  color: #e34724;
+}
+
 .invalid-feedback {
   background: linear-gradient(
     90deg,
