--- a/apps/meal-delivery/src/app/shared/nav/nav.component.html
+++ b/apps/meal-delivery/src/app/shared/nav/nav.component.html
@@ -13,9 +13,12 @@
     <li class="nav-item">
       <a class="nav-link" routerLink="/user">Gebruikers</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/product">Producten</a>
+    </li>
   </ul>
   <div class="spacer"></div>
-  <a aria-label="Angular on twitter" target="_blank" rel="noopener" href="https://twitter.com/avanshogeschool"
+  <a aria-label="Avans Hogeschool on twitter" target="_blank" rel="noopener" href="https://twitter.com/avanshogeschool"
     title="Twitter">
     <svg id="twitter-logo" height="24" data-name="Logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 400">
       <rect width="400" height="400" fill="none" />
@@ -24,7 +27,7 @@
         fill="#fff" />
     </svg>
   </a>
-  <a aria-label="Angular on YouTube" target="_blank" rel="noopener" href="https://www.youtube.com/c/avansonline"
+  <a aria-label="Avans Hogeschool on YouTube" target="_blank" rel="noopener" href="https://www.youtube.com/c/avansonline"
     title="YouTube">
     <svg id="youtube-logo" height="24" width="24" data-name="Logo" xmlns="http://www.w3.org/2000/svg"
       viewBox="0 0 24 24" fill="#fff">
