--- a/apps/meal-delivery/src/app/pages/meal/list/list.component.html
+++ b/apps/meal-delivery/src/app/pages/meal/list/list.component.html
@@ -9,7 +9,7 @@
     <div class="row container">
       <div class="col">
         <br>
-        <div class="genius-move-by-me">
+        <div class="mb240">
           <div class="row">
             <div class="col-sm-12 col-md-auto col-lg-6" *ngFor="let meal of meals; let i = index">
               <div class="card">
