--- a/apps/meal-delivery/src/app/pages/product/list/list.component.html
+++ b/apps/meal-delivery/src/app/pages/product/list/list.component.html
@@ -9,28 +9,29 @@
     <div class="row container">
       <div class="col">
         <br>
-        <div class="genius-move-by-me">
+        <div class="mb240">
           <div class="row">
             <div class="col-sm-12 col-md-auto col-lg-6" *ngFor="let product of products; let i = index">
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-title">{{product.name}}</h5>
                   <ul class="noBullets">
-                    <li *ngIf="product?.allergies.length>0; else noAllergies">Allergieën: {{ product?.allergies.join(', ') }} </li>
+                    <li *ngIf="product?.allergies.length>0; else noAllergies">Allergieën: {{ product?.allergies.join(',
+                      ') }} </li>
                     <ng-template #noAllergies>
                       <li>Product bevat geen allergieën.</li>
                     </ng-template>
                     <li *ngIf="product?.containsAlcohol">Product bevat alcohol.</li>
                     <li *ngIf="!product?.containsAlcohol">Product bevat geen alcohol.</li>
                     <li><a routerLink="{{ product.id }}" routerLinkActive="active" ariaCurrentWhenActive="page">Klik
-                      hier
-                      voor meer details.</a></li>
+                        hier
+                        voor meer details.</a></li>
                   </ul>
                   <div align="end"><a class="edit" title="Bewerken" data-toggle="tooltip"
-                                      routerLink="{{ product.id }}/edit" routerLinkActive="active"><i
-                    class="material-icons">&#xE254;</i></a>
+                      routerLink="{{ product.id }}/edit" routerLinkActive="active"><i
+                        class="material-icons">&#xE254;</i></a>
                     <a class="delete" title="Verwijderen" data-toggle="tooltip" (click)="deleteProduct(product.id!)"
-                       routerLinkActive="active"><i class="material-icons">&#xE872;</i></a>
+                      routerLinkActive="active"><i class="material-icons">&#xE872;</i></a>
                   </div>
                 </div>
               </div>
