--- a/apps/meal-delivery/src/app/shared/nav/nav.component.html
+++ b/apps/meal-delivery/src/app/shared/nav/nav.component.html
@@ -8,13 +8,13 @@
       <a class="nav-link" routerLink="/meal">Maaltijden</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" routerLink="/about-us">Over ons</a>
+      <a class="nav-link" routerLink="/product">Producten</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" routerLink="/user">Gebruikers</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" routerLink="/product">Producten</a>
+      <a class="nav-link" routerLink="/about-us">Over ons</a>
     </li>
   </ul>
   <div class="spacer"></div>
@@ -27,8 +27,8 @@
         fill="#fff" />
     </svg>
   </a>
-  <a aria-label="Avans Hogeschool on YouTube" target="_blank" rel="noopener" href="https://www.youtube.com/c/avansonline"
-    title="YouTube">
+  <a aria-label="Avans Hogeschool on YouTube" target="_blank" rel="noopener"
+    href="https://www.youtube.com/c/avansonline" title="YouTube">
     <svg id="youtube-logo" height="24" width="24" data-name="Logo" xmlns="http://www.w3.org/2000/svg"
       viewBox="0 0 24 24" fill="#fff">
       <path d="M0 0h24v24H0V0z" fill="none" />
