--- a/apps/meal-delivery/src/app/pages/product/edit/edit.component.html
+++ b/apps/meal-delivery/src/app/pages/product/edit/edit.component.html
@@ -2,18 +2,29 @@
   <h3>Bewerken van {{ productName }}</h3>
 </div>
 <div *ngIf="!componentExists">
-  <h3>Nieuwe maaltijd toevoegen</h3>
+  <h3>Nieuwe product toevoegen</h3>
 </div>
 <div class="max-width77 mb240">
   <!-- Edit form voor product model -->
   <form #productEditForm="ngForm" name="form" (ngSubmit)="onSubmit()" novalidate>
     <div class="row">
       <!-- allergies -->
-      <div class="col-5">
-        <div class="form-group">
-          <label for="allergies">Allergieën</label>
-          <input type="text" id="allergies" name="allergies[]" class="form-control" [(ngModel)]="product!.allergies"
-            #allergies="ngModel" />
+      <div class="col-5"><br>
+        <label class="aura30 move10left">Allergieën</label>
+        <button type="button" class="btn btn-primary move10left" (click)="addAllergy()">+ Voeg allergieën
+          toe</button><br>
+        <label class="move10left">(Voor geen waarde kiest u de lege optie.)</label>
+        <div *ngFor="let allergy of product!.allergies!; let i = index">
+          <div class="form-group">
+            <label for="allergies">{{allergy.charAt(0).toUpperCase() +
+              allergy.slice(1)}}</label>
+            <select class="form-select move10left" id="allergies" name="allergies" class="form-control"
+              [(ngModel)]="product!.allergies[i]">
+              <option label=""></option>
+              <option *ngFor="let allergyType of allergyTypes" [value]="allergyType">
+                {{allergyType}}</option>
+            </select>
+          </div>
         </div>
       </div>
       <div class="col">
@@ -41,12 +52,9 @@
       </div>
     </div>
     <br>
-    <!-- <div class="row">
-
-      </div> -->
 
     <!-- Submit en Cancel buttons -->
-    <div class="row py-3">
+    <div class="row">
       <div class="col">
         <button type="submit" class="btn btn-primary mx-2" [disabled]="!productEditForm.valid">
           <div *ngIf="componentExists && product">
