--- a/apps/meal-delivery/src/app/auth/register/register.component.html
+++ b/apps/meal-delivery/src/app/auth/register/register.component.html
@@ -42,15 +42,14 @@
       </div>
 
       <div class="form-check mb-3">
-        <input class="form-check-input mt-2 mx-2" type="checkbox" value="" id="form2Example3c" />
-        <label class="form-check-label " for="form2Example3">
+        <input class="form-check-input mx-2 move5down" type="checkbox" value="" id="checkbox" />
+        <label class="form-check-label " for="checkbox">
           Ik ga akkoord met alle verklaringen in de servicevoorwaarden
           <a href="https://policies.google.com/terms?hl=nl">Terms of service</a>
         </label>
       </div>
-
       <div class=" mx-4 mb-3 mb-lg-4">
-        <button type="button" class="btn btn-primary btn-medium" routerLink="/login">
+        <button type="button" class="btn btn-primary btn-medium minWidthButton" routerLink="/login">
           Aanmelden
         </button>
       </div>
